--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -55,6 +55,10 @@ pydantic-core==2.14.5
     # via pydantic
 pytest==7.4.3
     # via -r requirements.in
+python-dotenv==1.0.0
+    # via -r requirements.in
+schedule==1.2.1
+    # via -r requirements.in
 sniffio==1.3.0
     # via
     #   anyio
