--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,9 +34,11 @@ services:
     networks:
       - cronpg_network
     
-    
+
   backend:
-    build: .
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0'
     volumes:
       - .:/app
